--- a/src/www/app.htm
+++ b/src/www/app.htm
@@ -41,7 +41,7 @@
 			<header>Please enter the password for <b>admin</b> user:</header>
 			<form>
 				<div>User name:</div>
-				<input name="username" type="text" autocomplete="username" value="admin" disabled><span class=".check-light-off"></span>
+				<input name="username" type="text" autocomplete="username" value="admin" disabled><span class="check-light-off"></span>
 				<div>New password:</div>
 				<input name="password" type="password" autocomplete="new-password"><span></span>
 				<div>Confirm new password:</div>
