add parameter names to templates.

--- a/src/www/app.htm
+++ b/src/www/app.htm
@@ -18,7 +18,7 @@
 	<template id="template-header">
 		<section id="header">
 			<header>ZWagaH</header>
-			<div>Name</div>
+			<div class="name">Name</div>
 			<div></div>
 		</section>
 		
@@ -49,7 +49,7 @@
 				<div></div>
 				<input name="submit" type="submit" value="OK">
 			</form>
-			<i>Password Rule</i>
+			<i class="passwordRule">Password Rule</i>
 		</section>
 	</template>
 
