--- a/src/www/app.htm
+++ b/src/www/app.htm
@@ -14,7 +14,11 @@
 			<div></div><div></div><div></div>
 		</section>
 	</template>
-
+	
+	<template id="template-drop-list">
+		<div id="drop-list" class="display-none"></div>
+	</template>
+	
 	<template id="template-header">
 		<section id="header">
 			<header><nav><b>Z</b><b>W</b><b>aga</b><b>H</b></nav>Home Automation</header>
